# hyrun

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  .style.yapf  README.md  pyproject.toml  requirements.txt
docs/: _config.yml  _toc.yml  requirements.txt
docs/_build/.doctrees/: README.doctree  environment.pickle
docs/_build/html/: .buildinfo  README.html  genindex.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_templates/: footer-mid.html  next-top.html  prev-top.html  results_sidebar.html  setup-sidebar.html  sidebar-nav-bs-noheader.html  submission_sidebar.html
docs/src/: index.rst
docs/src/api/: index.rst  job.rst
docs/src/intro/: index.md
docs/src/setup/: jobs.md  settings.rst
docs/src/user_guide/: get_workflow.ipynb  init.rst  job.ipynb  (+4 more)
hyrun/: __init__.py  run.py
hyrun/compute/: acompute.py  compute.py
hyrun/decorators/: __init__.py  lists.py
hyrun/job/: __init__.py  array_job.py  decorators.py  get_workflow.py  graph.py  job.py  job_info.py  level.py  metadata.py  output.py  status.py
hyrun/remote/: __init__.py  connect.py  rsync.py
hyrun/result/: __init__.py  compute_result.py  get_result.py  result.py
hyrun/runner/: __init__.py  array_job.py  db.py  filemanager.py  gen_cmd.py  gen_jobs.py  job_prep.py  prepare_job.py  progress_bar.py  result.py  run.py  runner.py  transfer.py  wait.py
hyrun/scheduler/: __init__.py  abc.py  get_scheduler.py
tests/: conftest.py  requirements.txt  test_array_job.py  test_gen_cmd.py  test_graph.py  test_job.py  test_regression.py  test_result.py
(+214 files in other folders)
